--- a/CG2_DirectXGame.vcxproj
+++ b/CG2_DirectXGame.vcxproj
@@ -104,11 +104,11 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="externals\imgui\imgui_impl_win32.cpp" />
     <ClCompile Include="externals\imgui\imgui_tables.cpp" />
     <ClCompile Include="externals\imgui\imgui_widgets.cpp" />
-    <ClCompile Include="Log.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Pipeline.cpp" />
-    <ClCompile Include="ResourceObject.cpp" />
-    <ClCompile Include="Vector3Math.cpp" />
+    <ClCompile Include="math\Pipeline.cpp" />
+    <ClCompile Include="math\Vector3Math.cpp" />
+    <ClCompile Include="others\Log.cpp" />
+    <ClCompile Include="others\ResourceObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="externals\imgui\imconfig.h" />
@@ -119,12 +119,12 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="externals\imgui\imstb_rectpack.h" />
     <ClInclude Include="externals\imgui\imstb_textedit.h" />
     <ClInclude Include="externals\imgui\imstb_truetype.h" />
-    <ClInclude Include="Log.h" />
-    <ClInclude Include="Matrix.h" />
-    <ClInclude Include="Pipeline.h" />
-    <ClInclude Include="ResourceObject.h" />
-    <ClInclude Include="Vector.h" />
-    <ClInclude Include="Vector3Math.h" />
+    <ClInclude Include="math\Matrix.h" />
+    <ClInclude Include="math\Pipeline.h" />
+    <ClInclude Include="math\Vector.h" />
+    <ClInclude Include="math\Vector3Math.h" />
+    <ClInclude Include="others\Log.h" />
+    <ClInclude Include="others\ResourceObject.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="externals\imgui\LICENSE.txt" />
