--- a/CG2_DirectXGame.vcxproj.filters
+++ b/CG2_DirectXGame.vcxproj.filters
@@ -16,16 +16,30 @@
     <Filter Include="imgui">
       <UniqueIdentifier>{9a613651-960b-4f84-a188-7605467a3683}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\math">
+      <UniqueIdentifier>{677005b4-0d05-4f31-953a-bf2742169606}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\math">
+      <UniqueIdentifier>{4ba4f102-bd73-4c4c-bbf6-1793509429a3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\others">
+      <UniqueIdentifier>{80350cbf-80c7-4e81-b380-dd711bb073f4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\others">
+      <UniqueIdentifier>{d61cc937-1394-4b1e-a140-2f5473d95798}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="リソース ファイル\shaders">
+      <UniqueIdentifier>{c316dc4f-0b91-489f-8d10-02c1428696b7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
-    <None Include="resources\shaders\Object3d.hlsli" />
+    <None Include="resources\shaders\Object3d.hlsli">
+      <Filter>リソース ファイル\shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
-    <ClCompile Include="Log.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
     <ClCompile Include="externals\imgui\imgui.cpp">
@@ -49,20 +63,20 @@
     <ClCompile Include="externals\imgui\imgui_widgets.cpp">
       <Filter>imgui</Filter>
     </ClCompile>
-    <ClCompile Include="Pipeline.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="math\Pipeline.cpp">
+      <Filter>ソース ファイル\math</Filter>
     </ClCompile>
-    <ClCompile Include="Vector3Math.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="math\Vector3Math.cpp">
+      <Filter>ソース ファイル\math</Filter>
     </ClCompile>
-    <ClCompile Include="ResourceObject.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="others\Log.cpp">
+      <Filter>ソース ファイル\others</Filter>
+    </ClCompile>
+    <ClCompile Include="others\ResourceObject.cpp">
+      <Filter>ソース ファイル\others</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Log.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="externals\imgui\imconfig.h">
       <Filter>imgui</Filter>
     </ClInclude>
@@ -87,20 +101,23 @@
     <ClInclude Include="externals\imgui\imstb_truetype.h">
       <Filter>imgui</Filter>
     </ClInclude>
-    <ClInclude Include="Matrix.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="math\Matrix.h">
+      <Filter>ヘッダー ファイル\math</Filter>
     </ClInclude>
-    <ClInclude Include="Vector.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="math\Pipeline.h">
+      <Filter>ヘッダー ファイル\math</Filter>
     </ClInclude>
-    <ClInclude Include="Pipeline.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="math\Vector.h">
+      <Filter>ヘッダー ファイル\math</Filter>
     </ClInclude>
-    <ClInclude Include="Vector3Math.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="math\Vector3Math.h">
+      <Filter>ヘッダー ファイル\math</Filter>
     </ClInclude>
-    <ClInclude Include="ResourceObject.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="others\Log.h">
+      <Filter>ヘッダー ファイル\others</Filter>
+    </ClInclude>
+    <ClInclude Include="others\ResourceObject.h">
+      <Filter>ヘッダー ファイル\others</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -109,7 +126,11 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="resources\shaders\Object3d.PS.hlsl" />
-    <FxCompile Include="resources\shaders\Object3d.VS.hlsl" />
+    <FxCompile Include="resources\shaders\Object3d.PS.hlsl">
+      <Filter>リソース ファイル\shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="resources\shaders\Object3d.VS.hlsl">
+      <Filter>リソース ファイル\shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
