--- a/CG2_DirectXGame.vcxproj.filters
+++ b/CG2_DirectXGame.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="others\ResourceObject.cpp">
       <Filter>ソース ファイル\others</Filter>
     </ClCompile>
+    <ClCompile Include="Input.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="externals\imgui\imconfig.h">
@@ -115,6 +118,9 @@
     </ClInclude>
     <ClInclude Include="others\ResourceObject.h">
       <Filter>ヘッダー ファイル\others</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
